objects/CampaignMember.object
<CustomObject><fields>
        <fullName>Is_Individual__c</fullName>
        <formula>if( Contact.Account.npe01__SYSTEMIsIndividual__c =TRUE, "TRUE","FALSE")</formula>
        <label>Is Individual</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Related_Opp_Amount__c</fullName>
        <formula>Related_Opportunity__r.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Opp. Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Related_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Indicates if an Opportunity is related to this campaign member (for payment for example)</inlineHelpText>
        <label>Related Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Campaign Members</relationshipLabel>
        <relationshipName>Campaign_Members</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Related_Organization__c</fullName>
        <formula>Related_Opportunity__r.Account.Name</formula>
        <inlineHelpText>Indicates the name of the organization connected to the opportunity</inlineHelpText>
        <label>Related Organization</label>
        <type>Text</type>
    </fields><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><enableFeeds>false</enableFeeds></CustomObject>